@@ -1,6 +1,7 @@
 
-/proj_images
+
 /Ext_files
 /changes.txt
 /Project_Planning
 /node_modules
+/public/proj_Images
