@@ -133,6 +133,32 @@
     animation-duration: 1s;
 }
 
+.description img {
+    display: flex;
+    border-radius: 10px;
+    width: 1340px;
+}
+
+.badge{
+    height: 200px;
+    width: 200px;
+    display: flex;
+    align-self: flex-end;
+    flex-direction: row;
+}
+
+.skills{
+
+}
+
+.responsibilities{
+
+}
+
+.more{
+    display: flex;
+    justify-content: space-between;
+}
 
 @keyframes fade {
     from {opacity: 0.4}
