@@ -125,4 +125,5 @@ Fixed:
 -About link not functioning from projects->software page
 
 
-TODO:
+Fri July 11
+Re-organised the software projects page. Added adxl-345 project description and gif.
